name:                Aphrodite
version:             0.0.1
synopsis:            Finding planned parenthoods and routing you via public transportation
homepage:            https://github.com/emollient/Aphrodite
license:             GPL2
author:              Susan Lunn, Madison Flaherty, Sarah Federman
maintainer:          slgems@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable todo
  main-is:             Main.hs
  -- other-modules:       
  build-depends:       base ==4.7.*
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , persistent ==1.3.*
                     , persistent-template ==1.3.*
                     , persistent-sqlite ==1.3.*
                     , persistent-postgresql ==1.3.*
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
