name:                Aphrodite
version:             0.0.1
synopsis:            Finding planned parenthoods and routing you via public transportation
homepage:            https://github.com/emollient/Aphrodite
license:             GPL-2
author:              Susan Lunn, Madison Flaherty, Sarah Federman
maintainer:          slgems@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable aphrodite
  main-is:             Aphrodite.hs
  hs-source-dirs:      Aphrodite
  -- other-modules:       
  build-depends:       base ==4.*
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , shakespeare
                     , memcached
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , HTTP
                     , regex-compat
                     , json
                     , http-conduit
